# babys-first-oauth-app

./: .gitignore  README.md  docker-compose.yaml  generate_envrc.py  start_local.py
burger-joint-resources/: Dockerfile  package-lock.json  package.json  tsconfig.json
burger-joint-resources/hasura/: refresh-migrations.sh
burger-joint-resources/hasura/metadata/databases/: databases.yaml
burger-joint-resources/hasura/migrations/hasura/1714021154417_clients/: up.sql
burger-joint-resources/hasura/migrations/hasura/1714101538667_access_codes/: up.sql
burger-joint-resources/hasura/migrations/hasura/1714122681740_access_tokens/: up.sql
burger-joint-resources/hasura/seeds/hasura/: 1714033262848_add_flask_client.sql
burger-joint-resources/public/css/: index.css
burger-joint-resources/src/: index.ts
burger-joint-resources/src/lib/: env.ts  jwt.ts  logger.ts
burger-joint-resources/src/lib/graphql/: auth-codes.ts  burger.ts  client.ts  oauth-clients.ts
burger-joint-resources/src/lib/oauth/: authorise.ts  basic-auth.ts  client.ts  scope.ts
burger-joint-resources/src/routes/: burger-api.ts  oauth-token.ts
burger-joint-resources/src/types/: either.ts
burger-joint-resources/views/: authorise.ejs  global.ejs  home.ejs
flask-social-client/: Dockerfile  app.py  pyproject.toml
flask-social-client/flask_social/: __init__.py  burger_joint.py  crypto.py  mongo.py  token.py
flask-social-client/mongodb/: Dockerfile  init-mongo.js
flask-social-client/static/css/: index.css
flask-social-client/templates/: burgers.html  global.html  index.html
(+9 files in other folders)
